--- a/upload.css
+++ b/upload.css
@@ -233,29 +233,17 @@ label[for="fileInput"]:hover {
 }*/
 
 .close {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 32px;
-  height: 32px;
-  border-radius: 50%;
-  background-color: #f0f0f0;
-  color: #333;
-  font-size: 16px;
+  color: #aaa;
+  float: right;
+  font-size: 28px;
   font-weight: bold;
-  border: none;
   cursor: pointer;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-  appearance: none;
-  -webkit-appearance: none;
-  padding: 0;
-  line-height: 1;
-  box-sizing: border-box;
 }
 
-.close:hover {
-  background-color: #ddd; /* Hover-effekt */
-  color: #000; /* Ændrer tekstfarve ved hover */
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
 }
 
 /* Text input container */
@@ -417,7 +405,21 @@ audio {
     background-color: #5e5243;
   }
 
-  .header {
-    padding-top: 1rem; /* Mindre polstring på mobil */
+  .remove-btn {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    background: #776756;
+    color: white;
+    border: none;
+    border-radius: 50%; /* Sørger for cirkelform */
+    width: 24px; /* Ens bredde */
+    height: 24px; /* Ens højde */
+    cursor: pointer;
+    font-size: 1rem;
+    line-height: 24px; /* Centrerer teksten lodret */
+    text-align: center; /* Centrerer teksten horisontalt */
+    padding: 0; /* Fjern ekstra padding */
+    box-sizing: border-box; /* Inkluderer padding og border i dimensionerne */
   }
 }
